--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task7",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://skchaudhary7889.github.io/task7-27july",
+  "homepage": "https://ersurajkumar2023.github.io/gardening-template",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
